Fix search bar border color on dark mode

--- a/site/src/component/SearchModule/SearchModule.scss
+++ b/site/src/component/SearchModule/SearchModule.scss
@@ -9,7 +9,7 @@
     .search-module .input-group-text {
         color: var(--text);
         background-color: var(--overlay1);
-        border-color: var(--overlay3);
+        border-color: var(--overlay2);
     }
     .search-bar:focus {
         border-color: #80bdff;
